--- a/src/components/DistrictList/DistrictList.scss
+++ b/src/components/DistrictList/DistrictList.scss
@@ -1,22 +1,52 @@
 .district-list {
   margin: 20px;
-  padding: 10px;
+  padding: 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
-}
+  
+  h2 {
+    margin-bottom: 10px;
+    font-size: 1.5rem;
+    color: #f9f9f9;
+  }
 
-.district-list h2 {
-  margin-bottom: 10px;
-}
+  ul {
+    list-style-type: none;
+    padding: 0;
+    height: 90vh;
+    width: 100%;
+    overflow-y: auto;
+    padding-bottom: 30px;
+    li {
+      margin: 10px 0;
+      padding: 12px 16px;
+      background-color: #f9f9f9;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      transition: all 0.3s ease;
+      color:#555;
 
-.district-list ul {
-  list-style-type: none;
-  padding: 0;
-  height: 90vh;
-  width: 100%;
-  overflow-y: auto;
-}
+      &:hover {
+        background-color: #e0e0e0;
+        transform: translateY(-2px);
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      }
 
-.district-list li {
-  margin: 5px 0;
-} 
+      strong {
+        color: #555;
+        margin-right: 4px;
+      }
+    }
+  }
+
+  @media screen and (min-width: 1024px) {
+    max-width: 90vw;
+
+    ul {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 16px;
+      padding: 1rem;
+    }
+  }
+}
