--- a/src/components/DistrictList/DistrictList.scss
+++ b/src/components/DistrictList/DistrictList.scss
@@ -29,6 +29,7 @@
       display: flex;
       align-items: center;
       border-bottom: 5px solid #ccc;
+      cursor: pointer;
       &:hover {
         background-color: #e0e0e0;
         transform: translateY(-2px);
